--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "g-i-s": "^2.1.7",
+    "gridfs-stream": "^1.1.1",
     "mongoose": "^8.8.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
