--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "g-i-s": "^2.1.7",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.5",
